fixed layout issues to home screen

--- a/seismic-web/src/styles/Home.scss
+++ b/seismic-web/src/styles/Home.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   width: 100%;
   background-color: #fff;
-  height: calc(100vh - 88px);
+  height: 90vh;
   overflow: hidden;
   //background: no-repeat center 100%
   //  url('https://firebasestorage.googleapis.com/v0/b/showintel-8dcf8.appspot.com/o/wallpaper.png?alt=media&token=8ca3cfe1-a518-4e0e-a0c7-fd99a5ae0532');
